# python-test-package

./: README.md  pyproject.toml  setup.py  some_class.py  supa-lib.py
python-test-package/: __init__.py  some_class.py
python_test_package/: __init__.py
