[tool.poetry]
name = "python-test-package"
version = "0.1.0"
description = ""
authors = ["Vitaly Klimenko <vitostikitos@gmail.com>"]

packages = [
    { include = "python-test-package" },
    { include = "python-test-package/**/*.py" },
]


[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
